<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_green"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mathapp.saurabhjn76.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_text"
        android:id="@+id/textView"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/activity_top_margin"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:gravity="center_vertical|center">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/project1"
            android:id="@+id/button1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_btn"
            />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/project2"
            android:id="@+id/button2"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_btn"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/project3"
            android:id="@+id/button3"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_btn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/project4"
            android:id="@+id/button4"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_btn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/project5"
            android:id="@+id/button5"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_btn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/project6"
            android:id="@+id/button6"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_btn"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
